# 2023-haskell-projects

./: .gitignore  CHANGELOG.md  README.md  test0.cabal
app/: Common.hs  Main.hs
app/Calc/Algebraic/: Main.hs
app/Calc/Alt/: Main.hs
app/Calc/Numeric/: Main.hs
app/DMS/: Config.hs  Logging.hs  Main.hs  StaticFolders.hs
app/Data/Text/: ANSI.hs
app/ILang/: semantics.typ
app/SLang/: DeBruijn.hs  Interpreter.hs  Main.hs  Pretty.hs  Typechecker.hs  test.sl
app/Trials/: DictionaryScraper.hs  FileTrials.hs  Skyline.hs
app/Web/: Main.hs  MainOld.hs  Notes  Types.hs
site/: demo.md  global.css  global.js  index.md
site/2024/how-do-we-know/: index.md
site/2024/rendering-graphs/: index.md
site/2025/finding-ground/: index.md
site/template/: global.css  global.js  template.html
