cabal-version:      3.4
name:               test0
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             thefireflyer
maintainer:         the.fireflyer@protonmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable test0
    import:           warnings
    main-is:          Main.hs

    build-depends:  
        bytestring ^>=0.11.5.4,
        base ^>= 4.18,
        flow ^>= 2.0.0.5,
        split ^>= 0.2.5,
        foldl ^>= 1.4.16,
        array ^>= 0.5.4.0,
        text ^>= 2.1.1,
        text-short ^>= 0.1.6,
        filepath ^>= 1.5.4.0,
        file-io ^>= 0.1.5,
        rawfilepath ^>= 1.1.0,
        time ^>= 1.12,
        directory ^>= 1.3.9.0,
        random ^>= 1.2,
        comonad ^>= 5.0.9,
        reflection ^>= 2.1.9,
        lens ^>= 5.3.5,
        turtle ^>= 1.6.2,
        parsec ^>= 3.1.17.0,
        containers ^>= 0.7,
        unordered-containers ^>= 0.2.20,
        cmark-gfm ^>= 0.2.6,
        lucid >= 2.11.20250303,
        websockets ^>= 0.13.0,
        HDBC ^>= 2.4.0.4,
        HDBC-sqlite3 ^>= 2.3.3.1,
        hinotify ^>= 0.4.2,
        terminal-size ^>= 0.3.4,
        HUnit ^>= 1.6.2.0,
        QuickCheck ^>= 2.16.0.0

    other-modules:
        Common
        Data.Text.ANSI

        DMS.Main
        DMS.Config
        DMS.Logging
        DMS.StaticFolders

        Trials.FileTrials
        Trials.DictionaryScraper
        Trials.Skyline

        Calc.Numeric.Main
        Calc.Algebraic.Main
        Calc.Alt.Main

        Web.Main
        Web.Types

        SLang.Main
        SLang.DeBruijn
        SLang.Pretty
        SLang.Typechecker
        SLang.Interpreter

    -- other-extensions:
    hs-source-dirs:   app
    default-language: GHC2021


--  http://haskell.org/cabal/users-guide/

--  https://cabal.readthedocs.io/en/stable/cabal-package-description-file.html
